# ilarrumbide

./: .gitignore  README.md
rl-host/: .gitignore  QUICKSTART.md  README.md  pyproject.toml  requirements.in  requirements.txt  run.sh  test_system.py
rl-host/backend/: app.py
rl-host/backend/models/: restaurant.py  rl_agent.py  rl_environment.py
rl-host/backend/training/: data_generator.py  evaluate.py  train.py
rl-host/backend/utils/: config.py  helpers.py
rl-host/frontend/: app.js  index.html  style.css
